--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 									<a href="generic.html">
 										<h2>Pintura</h2>
 										<div class="content">
-											<p>Sed nisl arcu euismod sit amet nisi lorem etiam dolor veroeros et feugiat.</p>
+											<p>Toda a criança é um artista. O problema é o como manter-se artista depois de crescido (Picasso).</p>
 										</div>
 									</a>
 								</article>
